ajout des cercles de butinage sur cartes ruchers ign/osm

--- a/src/main/resources/templates/rucher/rucherDetailIgn.html
+++ b/src/main/resources/templates/rucher/rucherDetailIgn.html
@@ -11,6 +11,10 @@
 <script th:inline="javascript">
 	let rucheParcours = [[${rucheParcours}]];
 	let distParcours = [[${distParcours}]];
+	const longitudeCentre = [[${longitudeCentre}]];
+	const latitudeCentre = [[${latitudeCentre}]];
+	const cercles = [[#{cercles}]];
+	const distButinage = [[#{distButinage}]];
 	const ruches = [[${ruches}]];
 	const rucher = [[${rucher}]];
 	const nomHausses = [[${hausseNoms}]];
