carte rucher osm et ign ajouté layer distance de butinage

--- a/src/main/resources/templates/rucher/rucherDetailOsm.html
+++ b/src/main/resources/templates/rucher/rucherDetailOsm.html
@@ -13,6 +13,7 @@
 	let distParcours = [[${distParcours}]];
 	const longitudeCentre = [[${longitudeCentre}]];
 	const latitudeCentre = [[${latitudeCentre}]];
+	const rayonsButinage = [[${rayonsButinage}]];
 	const cercles = [[#{cercles}]];
 	const distButinage = [[#{distButinage}]];
 	const ruches = [[${ruches}]];
