rucherDetailGg ajout cerlces butinage. ign correction rayon

--- a/src/main/resources/templates/rucher/rucherDetailOsm.html
+++ b/src/main/resources/templates/rucher/rucherDetailOsm.html
@@ -11,6 +11,7 @@
 <script th:inline="javascript">
 	let rucheParcours = [[${rucheParcours}]];
 	let distParcours = [[${distParcours}]];
+	const rucherMapZoom = [[${@environment.getProperty('rucher.map.zoom')}]];
 	const longitudeCentre = [[${longitudeCentre}]];
 	const latitudeCentre = [[${latitudeCentre}]];
 	const rayonsButinage = [[${rayonsButinage}]];
