--- a/src/main/resources/templates/rucher/rucherDetailGg.html
+++ b/src/main/resources/templates/rucher/rucherDetailGg.html
@@ -8,6 +8,10 @@
 	let distParcours = [[${distParcours}]];
 	const rucher = [[${rucher}]];
 	const rucherMapZoom = [[${@environment.getProperty('rucher.map.zoom')}]];
+	const longitudeCentre = [[${longitudeCentre}]];
+	const latitudeCentre = [[${latitudeCentre}]];
+	const rayonsButinage = [[${rayonsButinage}]];
+	const distButinage = [[#{distButinage}]];
 	const urlruches = [[@{/}]];
 	const nomHausses = [[${hausseNoms}]];
 	const essaimtxt = [[#{essaim}]];
@@ -52,6 +56,7 @@
 				<a id="kml-download"></a>
 				<span th:if="${ruches.size()} > ${rucherParcoursNbruches}" id="parcours-redraw" class="oi oi-reload" th:title="#{parcoursRecalcul}"
 					aria-hidden="true"></span>
+				<span id="cercles" class="oi oi-rss" aria-hidden="true"></span>
 			</div>
 		</div>
 	</div>
