--- a/src/main/resources/templates/essaim/essaimTraitementLotForm.html
+++ b/src/main/resources/templates/essaim/essaimTraitementLotForm.html
@@ -12,13 +12,9 @@
 				'click',
 				function() {
 					if ($(this).is(':checked')) {
-						document.getElementById('typeEvenement')
-								.setAttribute('value',
-										"ESSAIMTRAITEMENTFIN");
+						$('#typeEvenement').attr('value', "ESSAIMTRAITEMENTFIN");
 					} else {
-						document.getElementById('typeEvenement')
-								.setAttribute('value',
-										"ESSAIMTRAITEMENT");
+						$('#typeEvenement').attr('value', "ESSAIMTRAITEMENT");
 					}
 				});
 		$("#evenementForm").validate({
