--- a/src/main/resources/templates/essaim/essaimDetail.html
+++ b/src/main/resources/templates/essaim/essaimDetail.html
@@ -3,8 +3,6 @@
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:inline="javascript">
 $(document).ready(function() {
-	
-
 	$('.confirmation').on('click', function () {
 		if([[${recolteHausses}]]) {
 			alert([[#{essaimsupprimerecolte}]]);
@@ -15,18 +13,16 @@ $(document).ready(function() {
 			return confirm([[#{supprimeressaim}]]);
 		}
     });
-	
     $('#associerRucheEssaim').DataTable();
-
 	$( "#clone" ).click(function() {
 		const noms = prompt([[#{nomessaimsvirgule}]]);
 		if (noms == null || noms == "") {
 		    return;
 		}
-		let tabNomExiste=[];
-		let tabNomOk=[];
-		let tabNomRucheOk=[];
-		let tabNomRucheIncorrect=[];
+		const tabNomExiste=[];
+		const tabNomOk=[];
+		const tabNomRucheOk=[];
+		const tabNomRucheIncorrect=[];
 		const nomsarr = noms.split(',');
 		for (const item of nomsarr) {
 			const arr = item.split(';');
