--- a/src/main/resources/templates/rucher/rucherAjout.html
+++ b/src/main/resources/templates/rucher/rucherAjout.html
@@ -19,11 +19,11 @@ $().ready(function() {
                 // on enlève la dernière virgule et met à jour l'url de
 				// traitement
             	rucheNoms = rucheNoms.substring(0, rucheNoms.length-1);
-            	document.getElementById('actionAjoutRuches').setAttribute('href',
+            	$('#actionAjoutRuches').attr('href',
             			[[@{/rucher/ruches/ajouter/}]] +
             			[[${rucher.id}]] + '/' + rucheNoms);
             } else {
-            	document.getElementById('actionAjoutRuches').setAttribute('href', "#actionAjoutRuches");
+            	$('#actionAjoutRuches').attr('href', "#actionAjoutRuches");
             }      
         }
 	}
