recolteHausse poids initialisé au poids à vide + reste miel. select

--- a/src/main/resources/templates/recolte/recolteHausseForm.html
+++ b/src/main/resources/templates/recolte/recolteHausseForm.html
@@ -29,7 +29,7 @@
 				}
 			}
 		});
-		$("#poidsAvant").focus();
+		$("#poidsAvant").focus().select();
 		$(".toggleplus").hide();
 		$("#toggleplus").click(function() {
 			$(".toggleplus").toggle();
