--- a/src/main/resources/templates/recolte/recolteHausseForm.html
+++ b/src/main/resources/templates/recolte/recolteHausseForm.html
@@ -20,12 +20,12 @@
 			rules : {
 				poidsAvant : {
 					required: true,
-					min: [[${detailRecolte.hausse.poidsVide}]],
+					range: [ [[${detailRecolte.hausse.poidsVide}]] , 80],
 					greaterThanEqual : "#poidsApres"
 				},
 				poidsApres : {
 					required: true,
-					min: [[${detailRecolte.hausse.poidsVide}]]
+					range: [ [[${detailRecolte.hausse.poidsVide}]], 80]
 				}
 			}
 		});
