--- a/src/main/resources/templates/recolte/recolteHausseForm.html
+++ b/src/main/resources/templates/recolte/recolteHausseForm.html
@@ -20,12 +20,10 @@
 			rules : {
 				poidsAvant : {
 					required: true,
-					range: [ [[${detailRecolte.hausse.poidsVide}]] , 80],
 					greaterThanEqual : "#poidsApres"
 				},
 				poidsApres : {
-					required: true,
-					range: [ [[${detailRecolte.hausse.poidsVide}]], 80]
+					required: true
 				}
 			}
 		});
@@ -63,14 +61,16 @@
 		<input type="hidden" th:field="*{id}" /> <input type="hidden"
 			th:field="*{recolte}" /> <input type="hidden" th:field="*{hausse}" />
 		<div class="form-group">
-			<label th:text="#{poidsAvant}" for="poidsAvant"></label> <input
-				class="form-control" type="number" th:field="*{poidsAvant}"
-				th:errorclass="fieldError" />
+			<label th:text="#{poidsAvant}" for="poidsAvant"></label>
+			<input class="form-control" 
+				type="number" th:min="${detailRecolte.hausse.poidsVide}" max="80" step="0.001"
+				th:field="*{poidsAvant}" th:errorclass="fieldError" />
 		</div>
 		<div class="form-group">
-			<label th:text="#{poidsApres}" for="poidsApres"></label> <input
-				class="form-control" type="number" th:field="*{poidsApres}"
-				th:errorclass="fieldError" />
+			<label th:text="#{poidsApres}" for="poidsApres"></label>
+			<input class="form-control" 
+				type="number" th:min="${detailRecolte.hausse.poidsVide}" max="80" step="0.001"
+				th:field="*{poidsApres}" th:errorclass="fieldError" />
 		</div>
 		<button type="button" id="toggleplus" th:text="#{plus}" ></button>
 		<br/><br/>
