--- a/src/main/resources/templates/hausse/hausseForm.html
+++ b/src/main/resources/templates/hausse/hausseForm.html
@@ -37,8 +37,7 @@
 					"required" : true
 				},
 				poidsVide : {
-					required : true,
-					number : true
+					required : true
 				},
 				nbCadres : {
 					required : true,
@@ -84,7 +83,7 @@
 		<div th:insert="includeForm :: dateAcquisitionField"></div>
 		<div class="form-group">
 			<label for="poidsVide" th:text="#{poidskg}"></label> <input
-				class="form-control" type="number" step="0.001"
+				class="form-control" type="number" step="0.001" min="0" max="20"
 				th:field="*{poidsVide}" th:errorclass="fieldError" />
 		</div>
 		<div class="form-group">
