Const.java nbruches

--- a/src/main/resources/templates/rucher/rucherHisto.html
+++ b/src/main/resources/templates/rucher/rucherHisto.html
@@ -33,7 +33,7 @@
 				</td>			
 				  <td th:text="${eve.get('type')}"></td>
 				  <td th:text="${eve.get('ruche')}"></td>
-				  <td th:text="${eve.get('nbruche')}"></td>
+				  <td th:text="${eve.get('nbruches')}"></td>
 				  <td th:text="${eve.get('etat')}"></td>
 				</tr>
 		</table>
