--- a/src/main/resources/templates/rucher/rucherStatistiques.html
+++ b/src/main/resources/templates/rucher/rucherStatistiques.html
@@ -27,7 +27,7 @@ $(document).ready(function() {
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-				<h1 class="item" th:text="#{ProductionRuchers}"></h1>
+				<h1 class="item" th:text="#{ProductionRuchersRecolte}"></h1>
 			</div>
 		
 			<div class="col">
@@ -56,8 +56,8 @@ $(document).ready(function() {
 						th:text="${rucherPoids.nom}"></a></td>
 				    <td th:text="${rucherPoids.nbRecoltes}"></td>
 				    <td th:text="${rucherPoids.pTotal}"></td>
-				    <td th:text="${rucherPoids.pMax}"></td>		
-					<td th:text="${rucherPoids.pMin}"></td>	
+				    <td th:text="${rucherPoids.pMax}"></td>
+					<td th:text="${rucherPoids.pMin}"></td>
 					<td th:text="${rucherPoids.pMoyen}"></td>	
 				</tr>
 			</tbody>
