Openlayers 6.5 GPplugin merge update ol6

--- a/src/main/resources/templates/rucher/rucherDetailOsm.html
+++ b/src/main/resources/templates/rucher/rucherDetailOsm.html
@@ -68,10 +68,8 @@
 				<a th:href="@{'/rucher/rapproche/Osm/'+${rucher.id}}"
 				  class="rapproche oi oi-aperture" th:title="#{rapprocher}"
 					aria-hidden="true"></a>
-				<!--/*  	
 				<span id="sauve-dessin" class="oi oi-pencil"
-					th:title="'sauve dessin'" aria-hidden="true"></span>
-				*/-->
+					th:title="#{enregistreDessin}" aria-hidden="true"></span>
 				<span id="liste" class="liste oi oi-list"
 					th:title="#{listeRuchesOrdonnees}" aria-hidden="true"></span>
 				<span id="listeplus" class="liste oi oi-list-rich"
