--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,26 +7,42 @@
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<script>	
-function showhidepass() {
-  let x = document.getElementById("password");
-  if (x.type === "password") {
-    x.type = "text";
-  } else {
-    x.type = "password";
-  }
-}
-window.onload = function() {
-	document.getElementById("username").focus();
-}
+<script th:inline="javascript">
+	function showhidepass() {
+		let x = document.getElementById("password");
+		if (x.type === "password") {
+			x.type = "text";
+		} else {
+			x.type = "password";
+		}
+	}
+	window.onload = function() {
+		document.getElementById("username").focus();
+		/*
+		document.getElementById("lang").onchange = function() {
+			this.form.setAttribute('action',
+					[[@{/login?lang=}]]+document.getElementById("lang").value);
+			this.form.submit();	
+		};
+		*/
+	}
 </script>
-	
+
 </head>
 <body>
-	<br />
 	<div th:if="${param.error}" th:text="#{nomOuPassIncorrect}"></div>
 	<div th:if="${param.logout}" th:text="#{deconnecte}"></div>
 	<br />
+	<!--/* 
+	<form th:action="@{/login}" method="get">
+		<div class="form-group">
+			<select name="lang" id="lang">
+				<option value="fr" th:selected="${#locale.language} == 'fr'">Français</option>
+				<option value="en" th:selected="${#locale.language} == 'en'">English</option>
+			</select>
+		</div>
+	</form>
+	*/-->
 	<form th:action="@{/login}" method="post">
 		<div class="form-group">
 			<label for="username" th:text="#{nomUtilisateur}"></label> <input
@@ -35,19 +51,21 @@ window.onload = function() {
 		<div class="form-group">
 			<label for="password" th:text="#{motDePasse}"></label> <input
 				type="password" class="form-control" id="password" name="password" />
-        </div>
-        <div class="form-check">
-			<input class="form-check-input" type="checkbox" id="showhide"
-				name="showhide" onclick="showhidepass()" /> 
-			<label class="form-check-label"
-				for="showhide" th:text="#{affichermotdepasse}"></label>
 		</div>
-		<br/>
+		<div class="form-check">
+			<input class="form-check-input" type="checkbox" id="showhide"
+				name="showhide" onclick="showhidepass()" /> <label
+				class="form-check-label" for="showhide"
+				th:text="#{affichermotdepasse}"></label>
+		</div>
+		<br />
 		<div class="form-group">
 			<input class="btn btn-primary" type="submit" th:value="#{connexion}" />
 		</div>
 	</form>
-	<br/><br/>
-	<a class="btn btn-default" th:href="@{'/forgotPassword'}" th:utext="#{forgotPassword}"></a>
+	<br />
+	<br />
+	<a class="btn btn-default" th:href="@{'/forgotPassword'}"
+		th:utext="#{forgotPassword}"></a>
 </body>
 </html>
