--- a/src/main/resources/templates/rucher/ruchersListeGg.html
+++ b/src/main/resources/templates/rucher/ruchersListeGg.html
@@ -24,7 +24,7 @@
 			<h1 class="item" th:text="#{rucherscarteggmaps}"></h1>
 			</div>
 			<div class="col">
-				<input type="text" placeholder="Recherche..." id="searchtext"/>
+				<input type="text" th:placeholder="#{recherche}" id="searchtext"/>
        			<span class="padicons">
        				<input type="checkbox" id="dragMarker" th:title="#{markerFixes}" checked/>
 				</span>							
