--- a/src/main/resources/templates/rucher/ruchersListeOsm.html
+++ b/src/main/resources/templates/rucher/ruchersListeOsm.html
@@ -35,7 +35,7 @@
 			<div class="col">
 				<a href="#" class="oi oi-question-mark" data-toggle="popover" data-trigger="focus" tabindex="0" role="button"
 					th:attr="data-content=#{aiderucherlisteignmarkers}"></a>
-				<input type="text" placeholder="Recherche..." id="searchtext"/>
+				<input type="text" th:placeholder="#{recherche}" id="searchtext"/>
 				<span class="padicons">
        				<input type="checkbox" id="dragMarker" th:title="#{markerFixes}" checked/>
 				</span>
